--- a/.github/workflows/Build-JDC-RE-SP-01B.yml
+++ b/.github/workflows/Build-JDC-RE-SP-01B.yml
@@ -20,8 +20,8 @@ on:
         default: 'false'
 
 env:
-  REPO_URL: https://github.com/coolsnowwolf/openwrt
-  REPO_BRANCH: lede-17.01
+  REPO_URL: https://github.com/coolsnowwolf/lede
+  REPO_BRANCH: master
   FEEDS_CONF: feeds.conf.default
   CONFIG_FILE: JDC-RE-SP-01B.config
   DIY_P1_SH: devices/JDC-RE-SP-01B/diy-part1.sh
